# spec_rag

./: .cursorrules  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  CURSOR_SETTINGS.md  README.md  alembic.ini  code_issues.json  coverage.json  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-ci.txt  requirements.txt
.claude/slash-commands/: fix-code-issues.md
.cursor/rules/: data‑processing‑rules.mdc  project‑overview.mdc  search‑embedding‑rules.mdc  testing‑strategy.mdc
.github/workflows/: ci.yml
.serena/: project.yml
alembic/: env.py
alembic/versions/: 40313011a84d_add_users_and_api_keys_tables.py  752e3e374368_create_documents_and_document_chunks_.py
app/: main.py
app/api/: admin.py  auth.py  documents.py  health.py  search.py  system.py
app/core/: auth.py  config.py  exceptions.py  middleware.py
app/database/: database.py  migration.py  production_config.py
app/deployment/: kubernetes_validator.py
app/models/: aperturedb.py  aperturedb_mock.py  database.py  milvus.py
app/repositories/: chunk_repository.py  document_repository.py
app/services/: admin_dashboard.py  alerting_service.py  auth_service.py  document_chunker.py  document_collector.py  document_processing_service.py  embedding_service.py  embedding_tasks.py  external_source_integration.py  hybrid_search_engine.py  logging_analysis.py  metadata_extractor.py  metrics_collection.py  query_expansion.py  reranker.py  search_diversity.py  search_suggestions.py
docs/: Embedding.md  MOCKING_GUIDE.md  RAG.md  README.md  TEST_FIX_PLAN.md  TEST_FIX_PLAN_100_COVERAGE.md  cursor_error_analysis.json  cursor_errors_20250127.txt  cursor_errors_20250727.txt  cursor_errors_20250727_2.txt  cursor_errors_20250727_3.txt  cursor_errors_current.json  cursor_errors_current.txt  cursor_errors_fix_summary.md  cursor_fixes_summary.md  cursor_integration.md
docs/DetailedDesign/: APIDesign.md  DataModel.md  DetailedDesignSummary.md  ImplementationPlan.md  SystemArchitecture.md
docs/Develop/: 開発環境セットアップ.md
docs/Plan/: ImplementationPlan.md  TDD_実行プラン.md  リファクタリング.md
docs/develop/: cycle.md  serena_mcp.md  setup.md
docs/develop/detailed_design/: APIDesign.md  DataModel.md  DetailedDesignSummary.md  SystemArchitecture.md
docs/develop/plan/: README.md  TDD_実行プラン.md  リファクタリング.md  仕様差分.md  実装計画書.md  進捗状況.md
docs/learning/: Step00_SystemOverview.md  Step01_DataFlow.md  Step02_API_Layer.md  Step03_Vector_Search_Engine.md  Step04_Embedding_Service_BGE_M3.md  Step05_DataModel.md  Step06_Authentication.md  Step07_ErrorHandling_Monitoring.md  Step08_Deployment_Operations.md  order.md
docs/spec/: data_ingestion_guide.md  usage.md
docs/test_fix_plan/: 001.md  002.md  003.md  004.md  005.md  006.md  007.json  embedding_service_mock_fix.md  embedding_tasks_test_fix.md
scripts/: analyze_cursor_errors.py  check_code_quality.py  check_code_quality.sh  collect_code_issues.py  fix_actual_import_errors.py  fix_all_config_imports.py  fix_all_cursor_errors_final.py  fix_all_test_issues.py  fix_chunkresult_import.py  fix_chunkresult_usage.py  fix_code_issues.py  fix_config_imports.py  fix_cursor_errors.py  fix_cursor_errors_20250727.py  fix_cursor_errors_batch2.py  fix_cursor_errors_batch3.py  fix_cursor_errors_batch4.py  fix_cursor_errors_comprehensive.py  fix_cursor_errors_final_208.py  fix_cursor_errors_final_batch.py  fix_final_errors.py  fix_indentation_errors.py  fix_missing_configs.py  fix_remaining_cursor_errors.py  fix_remaining_errors_comprehensive.py  fix_remaining_test_issues.py  fix_reranker_config.py  fix_reranker_interface.py  fix_service_class_names.py  fix_syntax_errors.py  fix_test_import_errors.py  fix_test_services_coverage_final.py  mypy_wrapper.sh  restore_main_py.py  simplify_reranker_tests.py
tests/: conftest.py  conftest_backup.py  conftest_extended.py  conftest_simple.py  fixtures_extended.py  test_100_percent_coverage.py  test_admin_dashboard.py  test_alerting_service.py  test_aperturedb_collections.py  test_aperturedb_mock.py  test_api_base.py  test_api_documents_100_coverage.py  test_api_documents_coverage.py  test_api_documents_final_coverage.py  test_api_documents_full_coverage.py  test_api_documents_mock_endpoints.py  test_api_documents_simple.py  test_api_final_coverage.py  test_api_search_complete_coverage.py.disabled  test_api_search_coverage.py  test_api_search_missing_coverage.py  test_api_search_simple_coverage.py  test_auth_apikey.py  test_auth_jwt.py  test_auth_middleware.py  test_auth_rbac.py  test_auth_unit.py  test_chunk_repository.py  test_core_exceptions.py  test_database_migration_coverage.py  test_database_models.py  test_database_uuid_field.py  test_document_chunker.py  test_document_collector.py  test_document_processing_service.py  test_document_repository.py  test_embedding_optimization.py  test_embedding_service.py  test_embedding_tasks.py  test_embedding_tasks_100_coverage.py  (+35 more)
